infra/k8s/event-bus-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-deployment
  labels:
    app: event-bus
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxSurge: "25%"
      maxUnavailable: "25%"
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
      - name: event-bus
        image: a1lf0ns0/event-bus:latest
