infra/k8s/posts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
  labels:
    app: posts
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxSurge: "25%"
      maxUnavailable: "25%"
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
      - name: posts
        image: a1lf0ns0/post:latest
