infra/k8s/comments-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
  labels:
    app: comments
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxSurge: "25%"
      maxUnavailable: "25%"
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
      - name: comments
        image: a1lf0ns0/comments:latest 
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: comments
  name: comments-srv
spec:
  ports:
  - port: 4001
    protocol: TCP
    targetPort: 4001
  selector:
    app: comments
status:
  loadBalancer: {}
