infra/k8s/event-bus-srv.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: event-bus
  name: event-bus-srv
spec:
  ports:
  - port: 4005
    protocol: TCP
    targetPort: 4005
  selector:
    app: event-bus
status:
  loadBalancer: {}
