infra/k8s/posts-srv-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: posts
  name: posts-srv-cluster-ip
spec:
  ports:
  - port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: posts
  type: ClusterIP
