infra/k8s/posts-srv-node.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: posts
  name: posts-srv
spec:
  ports:
  - port: 4000
    protocol: TCP
    targetPort: 4000
    nodePort: 30000
  selector:
    app: posts
  type: NodePort
